--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Nunito Sans', sans-serif;
   scroll-behavior: smooth;
-  @apply bg-neutral-900 text-neutral-300;
+  @apply bg-neutral-900 text-neutral-300 p-0 m-0;
 }
